argocd/apps/home-assistant/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant-app
        image: "ghcr.io/home-assistant/home-assistant:2022.12.1"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        resources: {}
        livenessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: ha-config-root
            mountPath: /config
          - name: ha-config-file
            mountPath: /config/configuration.yaml
            subPath: configuration.yaml
          - name: ha-lovelace-climate
            mountPath: /config/dashboards/climate.yaml
            subPath: climate.yaml
          - name: ha-automations
            mountPath: /config/automations
          - name: zigbee
            mountPath: /dev/ttyACM0
      restartPolicy: Always
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: home-assistant-config-root
        - name: ha-config-file
          configMap:
            name: home-assistant-config-file
            items:
              - key: configuration.yaml
                path: configuration.yaml
        - name: ha-lovelace-climate
          configMap:
            name: home-assistant-lovelace-climate
            items:
              - key: climate.yaml
                path: climate.yaml
        - name: ha-automations
          configMap:
            name: home-assistant-automations
        - name: zigbee
          hostPath:
            path: /dev/ttyACM0
