argocd/apps/home-assistant/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8123
    targetPort: http
    protocol: TCP
